added google meta tags for search

--- a/_layouts/head.html
+++ b/_layouts/head.html
@@ -1,5 +1,8 @@
+---
+layout: default
+---
+
 <head>
-  <meta name="google-site-verification" content="EMA6JZ3WMcsEFdUEV9McpupNJI1Ed9v3sT6ZMC2JZ7M" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,5 +14,6 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
-  
+    <meta name="google-site-verification" content="EMA6JZ3WMcsEFdUEV9McpupNJI1Ed9v3sT6ZMC2JZ7M" />
+
 </head>
